Revert "Refakturert tester (#421)" (#422)
This reverts commit ac013fd0c5490651f13f62053aa095c21f75c6b8.